src.1/objects/Activity.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Account.Phone</formula>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Results__c</fullName>
        <label>Activity Results</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Future Event</fullName>
                </value>
                <value>
                    <fullName>Left Brochure</fullName>
                </value>
                <value>
                    <fullName>Left Voice Mail</fullName>
                </value>
                <value>
                    <fullName>No Answer/ Busy Signal</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Spoke with-</fullName>
                </value>
                <value>
                    <fullName>Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Remoted in</fullName>
                </value>
                <value>
                    <fullName>Answered Reps Questions</fullName>
                </value>
                <value>
                    <fullName>Missed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person Cold Call</fullName>
                    <color>#0B6FCE</color>
                    <label>In-Person Cold Call</label>
                </value>
                <value>
                    <fullName>In-Person Demo</fullName>
                    <color>#78C953</color>
                    <label>In-Person Demo</label>
                </value>
                <value>
                    <fullName>In-Person Follow Up</fullName>
                    <color>#E27001</color>
                    <label>In-Person Follow Up</label>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                    <color>#A845DC</color>
                    <label>Inbound Call</label>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                    <color>#F3D904</color>
                    <label>Outbound Call</label>
                </value>
                <value>
                    <fullName>Phone Cold Call</fullName>
                    <color>#A53711</color>
                    <label>Phone Cold Call</label>
                </value>
                <value>
                    <fullName>Phone Demo</fullName>
                    <color>#66E9BD</color>
                    <label>Phone Demo</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                    <color>#0B24BE</color>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Administrative/Other</fullName>
                    <color>#419249</color>
                    <label>Administrative/Other</label>
                </value>
                <value>
                    <fullName>OSR Event</fullName>
                    <color>#B6E32E</color>
                    <label>OSR Event</label>
                </value>
                <value>
                    <fullName>ESR Event</fullName>
                    <color>#641CCF</color>
                    <label>ESR Event</label>
                </value>
                <value>
                    <fullName>Graphics Setup</fullName>
                    <color>#F96FB7</color>
                    <label>Graphics Setup</label>
                </value>
                <value>
                    <fullName>Training</fullName>
                    <color>#2F5D85</color>
                    <label>Training</label>
                </value>
                <value>
                    <fullName>Sync Install</fullName>
                    <color>#AFCADF</color>
                    <label>Sync Install</label>
                </value>
                <value>
                    <fullName>Custom Settings</fullName>
                    <color>#8F6429</color>
                    <label>Custom Settings</label>
                </value>
                <value>
                    <fullName>Kick Off Call</fullName>
                </value>
                <value>
                    <fullName>Midway Decision Maker Call</fullName>
                </value>
                <value>
                    <fullName>Final Call</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Message</fullName>
                    <color>#EFAE73</color>
                    <label>LinkedIn Message</label>
                </value>
                <value>
                    <fullName>Group Practice</fullName>
                    <color>#57F17C</color>
                    <label>Group Practice</label>
                </value>
                <value>
                    <fullName>PRT</fullName>
                    <color>#FFCC66</color>
                    <label>PRT</label>
                </value>
                <value>
                    <fullName>Newsletters</fullName>
                    <color>#33FF33</color>
                    <label>Newsletters</label>
                </value>
                <value>
                    <fullName>Groups</fullName>
                </value>
                <value>
                    <fullName>SR Portal</fullName>
                    <color>#33CCFF</color>
                    <label>SR Portal</label>
                </value>
                <value>
                    <fullName>Online Presence</fullName>
                    <color>#CC66CC</color>
                    <label>Online Presence</label>
                </value>
                <value>
                    <fullName>New Integration</fullName>
                </value>
                <value>
                    <fullName>General Training</fullName>
                </value>
                <value>
                    <fullName>Tech Help</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Reminders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADR_Set_DQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ADR Manager Override</description>
        <label>ADR Set DQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADR_Set_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAE will check this box to acknowledge receiving an ADR set</description>
        <inlineHelpText>Check this box when an ADR set has been received</inlineHelpText>
        <label>ADR Set Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADR_Set_SR_Revenue__c</fullName>
        <label>ADR Set SR Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADR_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ADR will check this box once a set has been made</description>
        <inlineHelpText>Check this box when a set has been made</inlineHelpText>
        <label>ADR Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADR__c</fullName>
        <label>ADR</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print Advertising</fullName>
                </value>
                <value>
                    <fullName>Trade Show/Event</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Campaign_Type__c</field>
                <operation>equals</operation>
                <valueField>Campaign.Type</valueField>
            </filterItems>
            <filterItems>
                <field>Campaign.Filter__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckOutAccuracy__c</fullName>
        <label>Check Out Accuracy (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOutDate__c</fullName>
        <label>Check Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckOutDistanceFromRecordMi__c</fullName>
        <label>Check Out Distance From Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOutLatitude__c</fullName>
        <label>Check Out Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOutLongitude__c</fullName>
        <label>Check Out Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__CTIInfo__c</fullName>
        <description>Additional CTI Information</description>
        <label>CTI Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CreatedLatitude__c</fullName>
        <label>Created Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedLocationAccuracy__c</fullName>
        <label>Created Location Accuracy (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedLocationVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedLongitude__c</fullName>
        <label>Created Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By_History__c</fullName>
        <description>Used to overwrite the created by field for pre-salesforce events</description>
        <label>Created By History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_System__c</fullName>
        <description>System generated Created By field</description>
        <formula>CreatedBy.FirstName  &amp;  &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_User_Role__c</fullName>
        <description>Pulls the Role of the User that created the Activity</description>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed_New__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SDR_Revenue_Paid__c</fullName>
        <description>This is the date we paid the SDR for this Revenue</description>
        <label>Date SDR Revenue Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DistanceFromRecordMi__c</fullName>
        <label>Distance from Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Time__c</fullName>
        <label>Due Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Source_Type__c</fullName>
        <description>Used to Filter ADR Report</description>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Source__c</fullName>
        <formula>IF( OnBrand_Set__c = TRUE,&quot;OnBrand&quot;,IF(  Created_By_History__c   = &quot;&quot;, Created_By_System__c, Created_By_History__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <inlineHelpText>This need to remain scheduled until you the scheduled time has passed when you must update this field for credit to be earned</inlineHelpText>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Results__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#0B6FCE</color>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#78C953</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>No Show</fullName>
                    <color>#E27001</color>
                    <label>No Show</label>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                    <color>#F3D904</color>
                    <label>Rescheduled</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                    <color>#A53711</color>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentExtension__c</fullName>
        <label>Five9 Agent Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentName__c</fullName>
        <label>Five9 Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent__c</fullName>
        <label>Five9 Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ANI__c</fullName>
        <label>Five9 ANI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignId__c</fullName>
        <label>Five9CallbackCampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignName__c</fullName>
        <label>Five9CallbackCampaignName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackId__c</fullName>
        <label>Five9CallbackId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackNumber__c</fullName>
        <label>Five9CallbackNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallType__c</fullName>
        <label>Five9 Call Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Campaign__c</fullName>
        <label>Five9 Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Cost__c</fullName>
        <label>Five9 Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five9__Five9DNIS__c</fullName>
        <label>Five9 DNIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9HandleTime__c</fullName>
        <label>Five9 Handle Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9SessionId__c</fullName>
        <label>Five9 Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9TalkAndHoldTimeInSeconds__c</fullName>
        <label>Five9 Talk and Hold Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Five9__Five9WrapTime__c</fullName>
        <label>Five9 After Call Work Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduction_to_Feature__c</fullName>
        <label>Introduction to Feature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SR Smart Reviews</fullName>
                </value>
                <value>
                    <fullName>SR Conversations</fullName>
                </value>
                <value>
                    <fullName>Limelight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified__c</fullName>
        <label>Last Modified date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>For setting the Lead Source field on auto-created Opportunities when applicable.</description>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADR Set</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Other Website</fullName>
                </value>
                <value>
                    <fullName>Referral Partner</fullName>
                </value>
                <value>
                    <fullName>SR Website</fullName>
                </value>
                <value>
                    <fullName>Trade Show/Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnBrand_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Event came from an OnBrand Set</description>
        <label>OnBrand Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerProfile__c</fullName>
        <description>Set by workflow on task completion.  For ROE accuracy.</description>
        <label>OwnerProfile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerRole__c</fullName>
        <description>Set by workflow rule at task completion.  Maintains historical accuracy for ROE.</description>
        <label>OwnerRole</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbook_Before_After__c</fullName>
        <label>Playbook Before/After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>After</fullName>
                    <default>true</default>
                    <label>After</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Playbook_Number_of_Days__c</fullName>
        <description>How many days (Before/After) the Reference Date should this task be due?</description>
        <label>Playbook Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbook_Reference_Date__c</fullName>
        <description>The play due date will be calculated by reference to this date.</description>
        <label>Playbook Reference Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Playbook Add Date1</fullName>
                    <label>Playbook Add Date</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__Callback_Date_Time__c</fullName>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallRecordingURL__c</fullName>
        <description>Link to the call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Date_Time__c</fullName>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Dial_Number__c</fullName>
        <description>Total number of dials on the record being called</description>
        <label>Call Dial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Hour__c</fullName>
        <description>Hour in which the call was placed from the record&#39;s perspective</description>
        <label>Call Hour</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Lead_Status__c</fullName>
        <description>Lead Status of the record called</description>
        <label>Call Lead Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Ring_Time__c</fullName>
        <description>Ring Time of the phone call</description>
        <label>Call Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Time_Zone__c</fullName>
        <description>Time zone of the number being called</description>
        <label>Call Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__ImpressionId__c</fullName>
        <externalId>true</externalId>
        <label>Impression ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>qbdialer__SMSReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Text message reminders will be sent to all attendees at the set reminder time.</inlineHelpText>
        <label>Send text msg reminder to all attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROE_Rollup_Date__c</fullName>
        <formula>IF( ADR_Set__c = true &amp;&amp; ISBLANK( Date_Completed_New__c ),  SR_Date_Created__c ,  Date_Completed_New__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROE Rollup Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ROE_Task__c</fullName>
        <formula>if(
(((OwnerProfile__c = &quot;Enterprise Sales&quot; ||
    OwnerProfile__c = &quot;Extended Sales&quot; ||
    OwnerProfile__c = &quot;Inside Sales&quot; ||
    OwnerProfile__c = &quot;Outside Sales&quot; ||
    OwnerProfile__c = &quot;Sales VP&quot; ||
OwnerProfile__c = &quot;Sales Manager&quot;) &amp;&amp;

    ispickval(Status, &quot;Completed&quot;) &amp;&amp;
    
    ((ispickval(Activity_Type__c,&quot;Outbound Call&quot;) &amp;&amp;
        ispickval(Activity_Results__c,&quot;Spoke with-&quot;)) ||

      ispickval(Activity_Type__c,&quot;Inbound Call&quot;) ||

      (ispickval(Activity_Type__c,&quot;In-Person Follow up&quot;) &amp;&amp;
        ispickval(Activity_Results__c,&quot;Spoke with-&quot;)) ||

      (ispickval(Activity_Type__c,&quot;In-Person Cold Call&quot;) &amp;&amp;
        ispickval(Activity_Results__c,&quot;Spoke with-&quot;)) ||

      (ispickval(Activity_Type__c,&quot;Email&quot;) &amp;&amp;
        ispickval(Activity_Results__c,&quot;Received&quot;)) ||

      (ispickval(Activity_Type__c,&quot;In-Person Demo&quot;) &amp;&amp;
        ispickval(Activity_Results__c,&quot;Spoke with-&quot;)) ||

      ispickval(Activity_Type__c,&quot;ESR Event&quot;) ||

      ispickval(Activity_Type__c,&quot;OSR Event&quot;) ||

      (ispickval(Activity_Type__c,&quot;Phone Demo&quot;) &amp;&amp;
        ispickval(Activity_Results__c,&quot;Spoke with-&quot;)) ||

      (ispickval(Activity_Type__c,&quot;Phone Cold Call&quot;) &amp;&amp;
        ispickval(Activity_Results__c,&quot;Spoke with-&quot;)))) ||

ADR_Set_Received__c = true),
true,
false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROE Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduler_Call_Attempt__c</fullName>
        <description>For schedulers to track how many attempts in takes to schedule new clients</description>
        <label>Scheduler Call Attempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDR_QA_Notes__c</fullName>
        <label>SDR QA Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDR_Sale_Verification__c</fullName>
        <label>SDR Sale Verification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Looked At</fullName>
                    <default>true</default>
                    <label>Not Looked At</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>DQ&#39;d</fullName>
                </value>
                <value>
                    <fullName>Flagged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDR_Set_Revenue_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if we paid the SDR for the revenue attached to this opportunity/task.</description>
        <label>SDR Set Revenue Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For the ADR manager to check after completion</inlineHelpText>
        <label>Set Review Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Review_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check for poor set quality</inlineHelpText>
        <label>Set Review Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Base Object</label>
        <referenceTo>sma__MABaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spoke_with_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to note that we have a recorded call on file and do not need the Spoke with- field completed</description>
        <inlineHelpText>Use to note that we have a recorded call on file and do not need the Spoke with- field completed, can only be used with calls made thru Five9. Recommended that you document who you spoke with in the comments.</inlineHelpText>
        <label>Spoke with- Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_Date_Created__c</fullName>
        <description>The date this Activity was created. Either imported from Sugar or set to the Salesforce CreatedDate.</description>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sugar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sugar ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sugar_Owner_Username__c</fullName>
        <label>Sugar Owner Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talked_To__c</fullName>
        <description>Who did you talk to?</description>
        <inlineHelpText>Who did you talk to?</inlineHelpText>
        <label>Who did you speak with?</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Date_Time__c</fullName>
        <label>Webinar Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Method__c</fullName>
        <label>Training Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar</fullName>
                    <default>true</default>
                    <label>Webinar</label>
                </value>
                <value>
                    <fullName>One-on-One</fullName>
                </value>
                <value>
                    <fullName>KB Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>